# Terra

./: .gitignore  CMakeLists.txt  README.md  app  imgui.ini
app.dSYM/Contents/Resources/DWARF/: app
cmake/: FindAssimp.cmake  FindGLFW.cmake  FindGLFW3.cmake
include/: camera.h  mesh.h  model.h  shader.h
include/assimp/: revision.h
include/glad/: glad.h
lib/: libassimp.5.dylib  libglfw.3.5.dylib
src/: glad.c  main.cpp  main_backup.cpp
src/Components/: All.hpp  Lights.hpp  Structures.hpp
src/Core/: Game.cpp  Game.hpp  GameState.hpp  Globals.hpp  OSMethods.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  imgui.ini
src/Events/: KeyDown.hpp  KeyUp.hpp
src/Systems/: GUISystem.cpp  GUISystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Texture.hpp  TextureSystem.cpp  TextureSystem.hpp  imgui.ini
src/assets/shaders/: frag.glsl  frag_light.frag  frag_lit.glsl  model_loading.vert  vert.glsl  vert_lit.glsl
